fix: fixed element zoom error on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,4 +115,9 @@ button.controls:hover,
         width: 12vw;
         height: 12vw;
     }
+
+    button.controls:hover,
+    .cards:hover {
+        transform: none;
+    }
 }
